--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    scroll-behavior: smooth;
+    outline: none;
+}
+body {
+    background-color: #000;
+    min-height: 100vh;
+}
+
+@layer utilities {
+    /* global  utilities */
+    .max-screen-width {
+        @apply w-full mx-auto max-w-screen-xl px-4;
+    }
+
+    .image {
+        @apply object-cover;
+    }
+    .flex-center {
+        @apply flex items-center justify-center;
+    }
+    .flex-between {
+        @apply flex justify-between items-center;
+    }
+
+
+
+    /* Header utilities classes*/
+    .header {
+        @apply fixed top-0 left-0 right-0 z-20;
+    }
+
+}
