--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,9 @@ body {
 @layer utilities {
     /* global  utilities */
     .max-screen-width {
-        @apply w-full mx-auto max-w-screen-xl px-4;
+        @apply max-w-screen-xl mx-auto flex items-center gap-4 px-4 py-2;
     }
-
-    .image {
-        @apply object-cover;
-    }
+    
     .flex-center {
         @apply flex items-center justify-center;
     }
@@ -31,11 +28,9 @@ body {
         @apply flex justify-between items-center;
     }
 
-
-
     /* Header utilities classes*/
     .header {
-        @apply fixed top-0 left-0 right-0 z-20;
+        @apply bg-black fixed top-0 w-full z-10;
     }
 
 }
